# RAMP

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile.evo  Dockerfile.ramp  README.md  ROADMAP.md  agent-coder.md  container-bench.md  docker-compose.evo.yml  docker-compose.ramp.yml  edit-image.md  human-cli-deploy.md  idea.md  models.json  pyproject.toml  run_benchmark.py  run_openhands.py
RAMP-Paper/: main.aux  main.out  main.tex
data/: task_guides.md
docs/: adding-backends.md  architecture.md
eval/: batch_eval.sh  container-runs-summary-per-task.json  container-runs-summary-pipeline.csv  container-runs-summary-pipeline.json  eval_new_models.sh  launch_all.sh  launch_batch2.sh  launch_cli_agents.sh  rerun_failed.sh  rerun_task45.sh  run_agent_container.sh  run_codex_eval.sh  run_full_eval.py  run_parallel_evals.sh  run_single_eval.sh
eval-hard/: README.md  container-runs-summary-per-task.csv  container-runs-summary-per-task.json
evo_cli/: __init__.py  cli.py  config.py  orchestrator.py
evobench_output/: evobench_report.json  evobench_report.md  openhands_report.json
evobench_runner/: __init__.py  agent_interface.py  agent_tools.py  baseline_agent.py  context_manager.py  controller.py  main.py  metrics.py  report.py  resurrection.py  sandbox.py  score_parser.py  workflow.py
model_logo/: claude.jfif
paper/: engineer-500-all.json  engineer-500-score.json  engineer_500_radar_plot.py  engineer_500_scatter_plot.py  engineer_500_score_plot.py  failure_attribution_dataset.md  failure_attribution_plot.py  v1_models_status.json  论文result部分.md
(+7815 files in other folders)
