[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ramp"
version = "0.3.0"
description = "RAMP — Reexamining Agentic Models in Production Systems"
readme = "ROADMAP.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
ramp = "ramp_cli.cli:main"

[project.optional-dependencies]
openhands = ["openhands>=0.1.0"]
dev = ["pytest>=7.0"]
